[metadata]
name = Spotify_downloader
version = 0.0.1
author = MK
author_email = likefi444@gmail.com
description = Simple free and unlimited spotify playlist downloads
long_description = file: README.md
long_description_content_type = file: README.md
url = https://github.com/MK-444/Spotify_downloader
project_urls =
    Bug Tracker = https://github.com/MK-444/Spotify_downloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = requirements.txt
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sptify_downloader = spotify-downloader.main:main

